--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 h1{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 100px;
+    font-size: 80px;
 } 
 .container {
 	max-width: 1200px;
@@ -43,4 +43,12 @@ button{
 .foto1{
 position: relative;
 left: 550px;
+}
+.second-main{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.schema1{
+    
 }
