--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 h1{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 80px;
+    font-size: 60px;
 } 
 .container {
 	max-width: 1200px;
@@ -22,12 +22,14 @@ h1{
     
        
 }
+.main-head{
+    display: flex;
+    flex-direction: row;
+}
    
 .descrizione  {
     margin-top: 50px;
-    display: flex;
-    flex-direction:column;
-    justify-content: center;   
+    
     
     
 }
@@ -41,9 +43,9 @@ button{
     height: 500px;
 }
 .foto1{
-position: relative;
-left: 550px;
-}
+    position: relative;
+    
+    }
 .second-main{
     display: flex;
     flex-direction: row;
@@ -90,4 +92,13 @@ padding-left: 20px;
     border: solid 1px black;
     margin-left: 90px;
 
+}
+/*fouth-main */
+.fourth-main{
+    display: flex;
+    flex-direction: row-reverse;
+}
+.partner{
+    width: 800px;
+    height: 400px;
 }
