--- a/css/style.css
+++ b/css/style.css
@@ -139,4 +139,43 @@ padding-left: 20px;
 
 
 }
+/*seventh*/
+.seventh-main{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+    gap: 10px;
+    height: 100vh;
+   
+}
+.
+.seventh-main img{
+    width: 200px;
+    height: 200px;
+}
+#green{
+    background-color: green;
+    width: 200px;
+    height: 200px;
+}
+#blue{
+    background-color:blue;
+    width: 200px;
+    height: 200px;
+}
+#pink{
+    background-color:pink;
+    width: 200px;
+    height: 200px;
+}
+#purple{
+    background-color:purple;
+    width: 200px;
+    height: 200px;
+}
 
+.finale{
+    margin: 0;
+    height: 100vh;
+}
