--- a/css/style.css
+++ b/css/style.css
@@ -209,3 +209,14 @@ padding-left: 20px;
     text-align: end;
     
 }
+/*tenth*/
+.tenth-main{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: start;
+    height: 700px;
+    background-color: beige;
+    padding: 100px;
+    line-height: 40px;
+}
