--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 
 /*utils*/
-p {
+p { 
     font-family: 'Hind Siliguri', sans-serif;
     font-size: 18px;
     font-size:larger;
 
 }
+b{
+    
+    font-size: 25px;
+}
 h2{
-    font-size: 35px;
+    font-size: 40px;
 }
 h1{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -15,23 +19,50 @@ h1{
 }
 ul {list-style-type:none;
 }
+h3{
+    font-size: 30px;
 
+}
 
-
+.container img{
+    width: 500px;
+    height: 500px;
+}
+button{
+    width: 130px;
+    height: 30px;
+    background-color: rgb(42, 42, 234);
+}
 
 /*header*/
+.sect{
+    background-color: aqua;
+}
+header a{
+    
+        color: grey;
+        text-decoration: none;
+    }
+
 
 .menu-header{
     display: flex;
     align-items: center;
-    flex-direction: row;
-    width: 1400px;
+    line-height: 10px;
+    width: 1430px;
     height: 70px;
-    background-color: lightblue;
+    background-color: white;
     justify-content: space-between;
-    
-   
+    line-height: 20px;
+    text-align: center;
+    color: gray;
+    text-decoration: none;
+    z-index: 1;
+    position: fixed;
+    padding: 10px;
+  
 }
+
 
 
 .container {
@@ -39,33 +70,59 @@ ul {list-style-type:none;
 	margin: 0 auto;
     
     
+    
        
+}
+#check{
+border-radius: 10%;
+}
+.first-main{
+    padding-top: 100px;
+    background-color: aqua;
+    
+   
+
+}
+.first-main button{
+    width: 300px;
+    height: 40px;
+    color: white;
 }
 .main-head{
     display: flex;
     flex-direction: row;
+    margin: 0;
+    
 }
    
 .descrizione  {
     margin-top: 50px;
+    line-height: 40px;
+    padding: 120px;
     
     
     
 }
-button{
-    width: 50px;
-    height: 50px;
-}
- 
-.container img{
-    width: 500px;
-    height: 500px;
-}
+
+
 .foto1{
+    
     position: relative;
+    top: 100px;
+    max-width: 800px;
+    
     
     }
+.first-main img{
+    width: 1200px;
+    height: 700px;
+}    
 /*second-main*/
+.sect-2{
+    padding-top: 100px;
+    t
+}
+
 .second-main{
     display: flex;
     flex-direction: row;
@@ -73,9 +130,21 @@ button{
     flex-wrap: wrap;
     
     
+    
    
 }
+.check{
+    border-color: aqua;
+}
 
+.arrow{
+    margin-bottom: 10px;
+    font-size: 50px;
+    margin-bottom: 30px;
+    position:relative;
+    top:550px;
+    right: 1100px;
+}
 
 .second-main button{
     width: 150px;
@@ -85,45 +154,29 @@ button{
     line-height: 10px;
     color: white;
     margin:  15px;
+    
 }
 .schema1
  {
 line-height: 40px;
 border: 1px solid black;
-width: 200px;
+width: 30%;
 height: 600px;
-padding-left: 5px;
-;
+text-align:center;
 
 }
-.schema2
- {
-line-height: 40px;
-border: 1px solid gray;
-width: 200px;
-height: 600px;
-padding-left: 5px;
 
-}
-.schema3
- {
-line-height: 40px;
-border: 1px solid gray;
-width: 200px;
-height: 600px;
-padding-left: 5px;
 
-}
 .second-main h3{
     text-align: center;
     font-size: 25px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    border: solid gray 1px;
+    border: solid gray 1px;   
     
-    
-   
-    
-    
+}
+.second-main a{
+
+
 }
 /* Qthird main */
 
@@ -134,7 +187,7 @@ padding-left: 5px;
     border: solid 1px black;
     margin-left: 100px;
     margin-top: 20px;
-    
+    padding: 20px;
     
 
 }
@@ -169,31 +222,33 @@ padding-left: 5px;
 .fourth-main button{
     width: 150px;
     height: 30px;
-    background-color: blue;
+    background-color: rgb(229, 229, 236);
     text-align: center;
     line-height: 10px;
-    color: white;
+    color: black;
     margin:  15px;
     
 }
 .partner{
     width: 700px;
     height: 400px;
-    padding-left: 50px;
+    padding-left: 100px;
+    padding-top: 50px;
 }
 .foto2{
     object-fit: 20px;
     padding-left: 50px;
+    
 }
 /* fifth main */
 .fifth-main{
-    text-align: center;
+    margin: 50px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     gap: 80px;
-    align-items: center;
-    align-content: center;
+    
+    
     
 
 }
@@ -225,22 +280,26 @@ padding-left: 5px;
 /*seventh*/
 .seventh-main{
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 100%;
-    gap: 10px;
-    height: 100vh;
-   
+    width: 800px;
+     width: 100%;
+    
+}
+.desiginit{
+    padding: 5px;
 }
 .
 .seventh-main img{
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
+    filter: inherit;
+    
+    
 }
 #green{
     background-color: green;
     width: 200px;
     height: 200px;
+    
 }
 #blue{
     background-color:blue;
@@ -257,41 +316,70 @@ padding-left: 5px;
     width: 200px;
     height: 200px;
 }
+#brown{
+    background-color:rgb(60, 0, 128);
+    width: 200px;
+    height: 200px;
+    filter: inherit;
+}
+#black{
+    background-color:rgb(111, 182, 220);
+    width: 200px;
+    height: 200px;
+    
+}
 
 .finale{
     margin: 0;
     height: 100vh;
+    
 }
+
 /*eight*/
+.eightth-main button{
+width: 150px;
+height: 30px;
+background-color: rgb(229, 229, 236);
+text-align: center;
+line-height: 10px;
+color: black;
+margin:  15px;
+}
+
 .eightth-main{
     display: flex;
     align-items: center;
     justify-content: space-around;
     flex-direction: row;
     background-color: aquamarine;
-    height: 300px;
+    height: 100vh;
+    
+}
+.eightth-main h3{
+    width: 600px;
+    height: 100px;
+    color: brown;
+    font-size: 50px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 /*nine*/
 .nineth-main{
     display: flex;
     flex-direction:column;
-    align-items:flex-start;
-    
     height: 100vh;
     padding: 150px;
     line-height: 80px;
     
-
-
-}
-#nove{
-   
-
-}
-.arrow{
-    text-align: end;
     
+
+
 }
+.nineth-main h3{
+    font-size: 30px;
+
+}
+
+
 /*tenth*/
 .tenth-main{
     display: flex;
@@ -299,7 +387,11 @@ padding-left: 5px;
     justify-content: space-around;
     text-align: start;
     height: 700px;
-    background-color: beige;
+    background-color:black;
     padding: 100px;
     line-height: 40px;
+    color: white;
+}
+.tenth-main h3{
+    padding: 20px;
 }
