--- a/css/style.css
+++ b/css/style.css
@@ -48,21 +48,24 @@ header a{
 .menu-header{
     display: flex;
     align-items: center;
-    line-height: 10px;
-    width: 1430px;
+    width: 100%;
     height: 70px;
     background-color: white;
     justify-content: space-between;
-    line-height: 20px;
     text-align: center;
     color: gray;
     text-decoration: none;
     z-index: 1;
     position: fixed;
-    padding: 10px;
+    padding:  20px;
+    
   
 }
 
+:hover.active{
+    border-bottom: 3px solid blue;
+    line-height: 70px;
+}
 
 
 .container {
@@ -127,14 +130,16 @@ border-radius: 10%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    flex-wrap: wrap;
-    
-    
-    
-   
+    flex-wrap: wrap;   
+    margin-top: 50px; 
 }
+
+
 .check{
     border-color: aqua;
+}
+.checkbox{
+    padding: 50px;
 }
 
 .arrow{
@@ -154,6 +159,7 @@ border-radius: 10%;
     line-height: 10px;
     color: white;
     margin:  15px;
+    
     
 }
 .schema1
@@ -369,9 +375,12 @@ margin:  15px;
     height: 100vh;
     padding: 150px;
     line-height: 80px;
+
     
 
 }
+
+
 .freccia{
     display:flex;
     padding: 20px;
@@ -380,6 +389,11 @@ margin:  15px;
     font-size: 30px;
 
 }
+summary {
+    cursor: pointer;
+    font-weight: 900;
+    font-size: 1.2em;
+  }
 
 
 /*tenth*/
